Create car and change floor

--- a/Trabalho 2/Trabalho-2.ipynb
+++ b/Trabalho 2/Trabalho-2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1631,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1632,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1633,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1634,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1635,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1636,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1637,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1638,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1639,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1640,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1641,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,12 +346,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1642,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
     "glEnable(GL_TEXTURE_2D)\n",
-    "qtd_texturas = 20\n",
+    "qtd_texturas = 50\n",
     "textures = glGenTextures(qtd_texturas)\n",
     "\n",
     "def load_texture_from_file(texture_id, img_textura):\n",
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1643,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,15 +394,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1644,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Processando modelo terreno.obj. Vertice inicial: 0\n",
-      "Processando modelo terreno.obj. Vertice final: 6\n"
+      "Processando modelo terreno.obj. Vertice inicial: 0\nProcessando modelo terreno.obj. Vertice final: 6\n"
      ]
     }
    ],
@@ -419,20 +418,19 @@
     "print('Processando modelo terreno.obj. Vertice final:',len(vertices_list))\n",
     "fim_pedra = len(vertices_list)\n",
     "\n",
-    "load_texture_from_file(1,'terreno/pedra.jpg')\n"
+    "load_texture_from_file(1,'terreno/piso-2.jpg')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1645,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Processando modelo terreno.obj. Vertice inicial: 6\n",
-      "Processando modelo terreno.obj. Vertice final: 12\n"
+      "Processando modelo terreno.obj. Vertice inicial: 6\nProcessando modelo terreno.obj. Vertice final: 12\n"
      ]
     }
    ],
@@ -449,19 +447,19 @@
     "print('Processando modelo terreno.obj. Vertice final:',len(vertices_list))\n",
     "fim_grama = len(vertices_list)\n",
     "\n",
-    "load_texture_from_file(4,'terreno/grama.jpg')\n"
+    "load_texture_from_file(4,'terreno/grama-1.jpg')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1646,
+   "execution_count": 214,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Processando modelo casa.obj. Vertice inicial: 12\n",
       "metal_dark_brown vertice inicial:  12\n",
@@ -512,17 +510,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1647,
+   "execution_count": 215,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Processando modelo sofa.obj. Vertice inicial: 585477\n",
-      "Processando modelo sofa.obj. Vertice final: 590289\n"
+      "Processando modelo sofa.obj. Vertice inicial: 585477\nProcessando modelo sofa.obj. Vertice final: 590289\n"
      ]
     }
    ],
@@ -544,12 +541,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1648,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Processando modelo sofa.obj. Vertice inicial: 590289\n",
       "Processando modelo sofa.obj. Vertice final: 1263057\n"
@@ -574,18 +571,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1649,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Processando modelo arvore.obj. Vertice inicial: 1263057\n",
-      "Materiais.001 vertice inicial:  1263057\n",
-      "Materiais vertice inicial:  1350753\n",
-      "Processando modelo arvore.obj. Vertice final: 1408281\n",
-      "[1263057, 1350753, 1408281]\n"
+      "Processando modelo arvore.obj. Vertice inicial: 1263057\nMateriais.001 vertice inicial:  1263057\nMateriais vertice inicial:  1350753\nProcessando modelo arvore.obj. Vertice final: 1408281\n[1263057, 1350753, 1408281]\n"
      ]
     }
    ],
@@ -619,15 +612,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1650,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Processando modelo pato.obj. Vertice inicial: 1408281\n",
-      "Processando modelo pato.obj. Vertice final: 1460793\n"
+      "Processando modelo pato.obj. Vertice inicial: 1408281\nProcessando modelo pato.obj. Vertice final: 1460793\n"
      ]
     }
    ],
@@ -649,15 +641,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1651,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Processando modelo mesa.obj. Vertice inicial: 1460793\n",
-      "Processando modelo mesa.obj. Vertice final: 1469547\n"
+      "Processando modelo mesa.obj. Vertice inicial: 1460793\nProcessando modelo mesa.obj. Vertice final: 1469547\n"
      ]
     }
    ],
@@ -679,15 +670,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1652,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Processando modelo mesa.obj. Vertice inicial: 1469547\n",
-      "Processando modelo mesa.obj. Vertice final: 1472427\n"
+      "Processando modelo mesa.obj. Vertice inicial: 1469547\nProcessando modelo mesa.obj. Vertice final: 1472427\n"
      ]
     }
    ],
@@ -708,6 +698,82 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Processando modelo carro.obj. Vertice inicial: 1472427\n",
+      "Chrome vertice inicial:  1472427\n",
+      "Pneu vertice inicial:  1505535\n",
+      "Pneu2 vertice inicial:  1528575\n",
+      "Cuire vertice inicial:  1668519\n",
+      "Laniere vertice inicial:  1699623\n",
+      "Cuire_levier_de_vitesse_ vertice inicial:  1796295\n",
+      "Material.001 vertice inicial:  2202903\n",
+      "Headlights__bottom vertice inicial:  2215095\n",
+      "Mirror vertice inicial:  2250981\n",
+      "Wood vertice inicial:  2309925\n",
+      "Leather_volant vertice inicial:  2326053\n",
+      "Verre vertice inicial:  2427315\n",
+      "Compteur vertice inicial:  2696883\n",
+      "Aiguille vertice inicial:  2735283\n",
+      "Tableau_de_bord vertice inicial:  2862963\n",
+      "Material.002 vertice inicial:  2887083\n",
+      "Lamp vertice inicial:  2927697\n",
+      "Carroserie vertice inicial:  2934033\n",
+      "Tapis_sol vertice inicial:  3135393\n",
+      "Processando modelo casa.obj. Vertice final: 3212085\n"
+     ]
+    }
+   ],
+   "source": [
+    "modelo = load_model_from_file('carro/carro.obj')\n",
+    "\n",
+    "print('Processando modelo carro.obj. Vertice inicial:',len(vertices_list))\n",
+    "ini_carro = len(vertices_list)\n",
+    "carro_vertices_text = []\n",
+    "faces_visited = []\n",
+    "carro_text_id = [20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38]\n",
+    "for face in modelo['faces']:\n",
+    "    if face[2] not in faces_visited:\n",
+    "        print(face[2], 'vertice inicial: ', len(vertices_list))\n",
+    "        faces_visited.append(face[2])\n",
+    "        carro_vertices_text.append(len(vertices_list))\n",
+    "    for vertice_id in face[0]:\n",
+    "        vertices_list.append( modelo['vertices'][vertice_id-1] )\n",
+    "    for texture_id in face[1]:\n",
+    "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
+    "print('Processando modelo casa.obj. Vertice final:',len(vertices_list))\n",
+    "fim_carro = len(vertices_list)\n",
+    "    \n",
+    "carro_vertices_text.append(fim_carro)\n",
+    "\n",
+    "load_texture_from_file(20,'carro/leather_white_diff_2k.jpg')\n",
+    "load_texture_from_file(21,'carro/pireli.png')\n",
+    "load_texture_from_file(22,'carro/textura-de-pneu-fundo_70287-75.jpg')\n",
+    "load_texture_from_file(23,'carro/fabric_leather_01_diff_2k.jpg')\n",
+    "load_texture_from_file(24,'carro/fabric_leather_01_diff_2k.jpg')\n",
+    "load_texture_from_file(25,'carro/fabric_leather_01_diff_2k.jpg')\n",
+    "load_texture_from_file(26,'carro/istockphoto-1192071296-612x612.jpg')\n",
+    "load_texture_from_file(27,'carro/istockphoto-1192071296-612x612.jpg')\n",
+    "load_texture_from_file(28,'carro/RoundLampE_S.jpg')\n",
+    "load_texture_from_file(29,'carro/istockphoto-1192071296-612x612.jpg')\n",
+    "load_texture_from_file(30,'carro/Shelby_logo.png')\n",
+    "load_texture_from_file(31,'carro/leather_white_diff_2k.jpg')\n",
+    "load_texture_from_file(32,'carro/istockphoto-1192071296-612x612.jpg')\n",
+    "load_texture_from_file(33,'carro/istockphoto-1192071296-612x612.jpg')\n",
+    "load_texture_from_file(34,'carro/leather_red_03_coll1_2k.jpg')\n",
+    "load_texture_from_file(35,'carro/istockphoto-1192071296-612x612.jpg')\n",
+    "load_texture_from_file(36,'carro/RoundLampE_S.jpg')\n",
+    "load_texture_from_file(37,'carro/leather_red_03_coll1_2k.jpg')\n",
+    "load_texture_from_file(38,'carro/leather_white_diff_2k.jpg')\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -720,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1653,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1654,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1655,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1656,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1657,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1658,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1659,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1660,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1661,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1662,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1663,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1664,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,6 +1151,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def desenha_carro():\n",
+    "    \n",
+    "    \n",
+    "    # aplica a matriz model\n",
+    "    \n",
+    "    # rotacao\n",
+    "    angle = 0.0;\n",
+    "    r_x = 0.0; r_y = 0.0; r_z = 1.0;\n",
+    "    \n",
+    "    # translacao\n",
+    "    t_x = -20; t_y = -1.0; t_z = 9.0;\n",
+    "    \n",
+    "    # escala\n",
+    "    s_x = 3.0; s_y = 3.0; s_z = 3.0;\n",
+    "    \n",
+    "    mat_model = model(angle, r_x, r_y, r_z, t_x, t_y, t_z, s_x, s_y, s_z)\n",
+    "    loc_model = glGetUniformLocation(program, \"model\")\n",
+    "    glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
+    "    \n",
+    "    \n",
+    "    for i in range(0, len(carro_text_id)):\n",
+    "        glBindTexture(GL_TEXTURE_2D, carro_text_id[i])\n",
+    "        glDrawArrays(GL_TRIANGLES, carro_vertices_text[i], carro_vertices_text[i+1]-carro_vertices_text[i]) ## renderizandos"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1096,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1665,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1183,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1666,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1667,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1668,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,6 +1376,7 @@
     "    desenha_pato()\n",
     "    desenha_mesa()\n",
     "    desenha_ceu()\n",
+    "    desenha_carro()\n",
     "    \n",
     "    rotacao_inc += 0.1\n",
     "    \n",
@@ -1306,9 +1404,8 @@
    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
