--- a/Trabalho 2/Trabalho-2.ipynb
+++ b/Trabalho 2/Trabalho-2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 581,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 582,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 583,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 584,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 585,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 586,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 587,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 588,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 589,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 590,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 591,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 593,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,14 +393,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 594,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Processando modelo piso.obj. Vertice inicial: 0\nProcessando modelo piso.obj. Vertice final: 6\n"
+      "Processando modelo piso.obj. Vertice inicial: 0\n",
+      "Processando modelo piso.obj. Vertice final: 6\n"
      ]
     }
    ],
@@ -422,14 +423,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Processando modelo grama.obj. Vertice inicial: 6\nProcessando modelo grama.obj. Vertice final: 12\n"
+      "Processando modelo grama.obj. Vertice inicial: 6\n",
+      "Processando modelo grama.obj. Vertice final: 12\n"
      ]
     }
    ],
@@ -451,15 +453,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 596,
+   "execution_count": 188,
    "metadata": {
     "scrolled": false,
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Processando modelo casa.obj. Vertice inicial: 12\n",
       "metal_dark_brown vertice inicial:  12\n",
@@ -510,16 +512,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 597,
+   "execution_count": 189,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Processando modelo sofa.obj. Vertice inicial: 585477\nProcessando modelo sofa.obj. Vertice final: 590289\n"
+      "Processando modelo sofa.obj. Vertice inicial: 585477\n",
+      "Processando modelo sofa.obj. Vertice final: 590289\n"
      ]
     }
    ],
@@ -541,12 +544,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 598,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Processando modelo tv.obj. Vertice inicial: 590289\n",
       "Processando modelo tv.obj. Vertice final: 1263057\n"
@@ -571,14 +574,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 599,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Processando modelo arvore.obj. Vertice inicial: 1263057\nMateriais.001 vertice inicial:  1263057\nMateriais vertice inicial:  1350753\nProcessando modelo arvore.obj. Vertice final: 1408281\n"
+      "Processando modelo arvore.obj. Vertice inicial: 1263057\n",
+      "Materiais.001 vertice inicial:  1263057\n",
+      "Materiais vertice inicial:  1350753\n",
+      "Processando modelo arvore.obj. Vertice final: 1408281\n"
      ]
     }
    ],
@@ -610,14 +616,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 600,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Processando modelo pato.obj. Vertice inicial: 1408281\nProcessando modelo pato.obj. Vertice final: 1460793\n"
+      "Processando modelo pato.obj. Vertice inicial: 1408281\n",
+      "Processando modelo pato.obj. Vertice final: 1460793\n"
      ]
     }
    ],
@@ -639,14 +646,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 601,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Processando modelo mesa.obj. Vertice inicial: 1460793\nProcessando modelo mesa.obj. Vertice final: 1469547\n"
+      "Processando modelo mesa.obj. Vertice inicial: 1460793\n",
+      "Processando modelo mesa.obj. Vertice final: 1469547\n"
      ]
     }
    ],
@@ -668,14 +676,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 602,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Processando modelo ceu.obj. Vertice inicial: 1469547\nProcessando modelo ceu.obj. Vertice final: 1472427\n"
+      "Processando modelo ceu.obj. Vertice inicial: 1469547\n",
+      "Processando modelo ceu.obj. Vertice final: 1472427\n"
      ]
     }
    ],
@@ -697,16 +706,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 603,
+   "execution_count": 195,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Processando modelo carro.obj. Vertice inicial: 1472427\nProcessando modelo carro.obj. Vertice final: 1486629\n"
+      "Processando modelo carro.obj. Vertice inicial: 1472427\n",
+      "Processando modelo carro.obj. Vertice final: 1486629\n"
      ]
     }
    ],
@@ -728,14 +738,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 604,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Processando modelo cachorro.obj. Vertice inicial: 1486629\nProcessando modelo cachorro.obj. Vertice final: 1702533\n"
+      "Processando modelo cachorro.obj. Vertice inicial: 1486629\n",
+      "Processando modelo cachorro.obj. Vertice final: 1702533\n"
      ]
     }
    ],
@@ -756,6 +767,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processando modelo homem.obj. Vertice inicial: 1702533\n",
+      "Processando modelo homem.obj. Vertice final: 1764159\n"
+     ]
+    }
+   ],
+   "source": [
+    "modelo = load_model_from_file('homem/homem.obj')\n",
+    "\n",
+    "print('Processando modelo homem.obj. Vertice inicial:',len(vertices_list))\n",
+    "ini_homem = len(vertices_list)\n",
+    "for face in modelo['faces']:\n",
+    "    for vertice_id in face[0]:\n",
+    "        vertices_list.append( modelo['vertices'][vertice_id-1] )\n",
+    "    for texture_id in face[1]:\n",
+    "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
+    "print('Processando modelo homem.obj. Vertice final:',len(vertices_list))\n",
+    "fim_homem = len(vertices_list)\n",
+    "\n",
+    "load_texture_from_file(22,'homem/homem.jpg')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -768,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 605,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 606,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 607,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 608,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 609,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 610,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 611,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 612,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 613,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 614,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 615,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 616,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 617,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,6 +1161,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def desenha_homem():\n",
+    "    \n",
+    "    # rotacao\n",
+    "    angle = 0.0;\n",
+    "    rx = 0.0; ry = 1.0; rz = 0.0;\n",
+    "    \n",
+    "    # translacao\n",
+    "    tx = 15.5; ty = -1.0; tz = -15.0;\n",
+    "    \n",
+    "    # escala\n",
+    "    sx = 0.4; sy = 0.4; sz = 0.4;\n",
+    "    \n",
+    "    mat_model = model(angle, rx, ry, rz, tx, ty, tz, sx, sy, sz)\n",
+    "    loc_model = glGetUniformLocation(program, \"model\")\n",
+    "    glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
+    "       \n",
+    "    glBindTexture(GL_TEXTURE_2D, 22)\n",
+    "    \n",
+    "    glDrawArrays(GL_TRIANGLES, ini_homem, fim_homem-ini_homem)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1131,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 618,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 619,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1265,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 620,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1283,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 621,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,6 +1383,7 @@
     "    desenha_ceu()\n",
     "    desenha_carro()\n",
     "    desenha_cachorro()\n",
+    "    desenha_homem()\n",
     "    \n",
     "    mat_view = view()\n",
     "    loc_view = glGetUniformLocation(program, \"view\")\n",
@@ -1340,8 +1409,8 @@
    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.5 64-bit"
+   "display_name": "Python 3.8.5 64-bit",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1353,7 +1422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
