--- a/Trabalho 2/Trabalho-2.ipynb
+++ b/Trabalho 2/Trabalho-2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 827,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 828,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 829,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 830,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 831,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 832,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 833,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 834,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 835,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 836,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 837,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 838,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 839,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 840,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 841,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 842,
    "metadata": {
     "scrolled": false,
     "tags": []
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 843,
    "metadata": {
     "scrolled": true
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 844,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 845,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 846,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 847,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 848,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 849,
    "metadata": {
     "tags": []
    },
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 850,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 851,
    "metadata": {},
    "outputs": [
     {
@@ -797,6 +797,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 852,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processando modelo cama.obj. Vertice inicial: 1764159\n",
+      "Processando modelo cama.obj. Vertice final: 2487699\n"
+     ]
+    }
+   ],
+   "source": [
+    "modelo = load_model_from_file('cama/cama.obj')\n",
+    "\n",
+    "print('Processando modelo cama.obj. Vertice inicial:',len(vertices_list))\n",
+    "ini_cama = len(vertices_list)\n",
+    "for face in modelo['faces']:\n",
+    "    for vertice_id in face[0]:\n",
+    "        vertices_list.append( modelo['vertices'][vertice_id-1] )\n",
+    "    for texture_id in face[1]:\n",
+    "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
+    "print('Processando modelo cama.obj. Vertice final:',len(vertices_list))\n",
+    "fim_cama = len(vertices_list)\n",
+    "\n",
+    "load_texture_from_file(23,'cama/cama.tga')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -809,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 853,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 854,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 855,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 856,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 857,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 858,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 859,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 860,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 861,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 862,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 863,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1108,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 864,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 865,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,29 +1192,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 866,
    "metadata": {},
    "outputs": [],
    "source": [
     "def desenha_homem():\n",
+    "\n",
+    "    # rotacao\n",
+    "    angle = 0.0;\n",
+    "    rx = 0.0; ry = 1.0; rz = 0.0;\n",
+    "\n",
+    "    # translacao\n",
+    "    tx = -1.0; ty = -1.0; tz = -15.0;\n",
+    "\n",
+    "    # escala\n",
+    "    sx = 0.4; sy = 0.4; sz = 0.4;\n",
+    "\n",
+    "    mat_model = model(angle, rx, ry, rz, tx, ty, tz, sx, sy, sz)\n",
+    "    loc_model = glGetUniformLocation(program, \"model\")\n",
+    "    glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
+    "\n",
+    "    glBindTexture(GL_TEXTURE_2D, 22)\n",
+    "\n",
+    "    glDrawArrays(GL_TRIANGLES, ini_homem, fim_homem-ini_homem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 867,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def desenha_cama():\n",
     "    \n",
     "    # rotacao\n",
     "    angle = 0.0;\n",
     "    rx = 0.0; ry = 1.0; rz = 0.0;\n",
     "    \n",
     "    # translacao\n",
-    "    tx = 15.5; ty = -1.0; tz = -15.0;\n",
+    "    tx = 15.0; ty = -1.7; tz = -18.0;\n",
     "    \n",
     "    # escala\n",
-    "    sx = 0.4; sy = 0.4; sz = 0.4;\n",
+    "    sx = 0.05; sy = 0.05; sz = 0.05;\n",
     "    \n",
     "    mat_model = model(angle, rx, ry, rz, tx, ty, tz, sx, sy, sz)\n",
     "    loc_model = glGetUniformLocation(program, \"model\")\n",
     "    glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
     "       \n",
-    "    glBindTexture(GL_TEXTURE_2D, 22)\n",
+    "    glBindTexture(GL_TEXTURE_2D, 23)\n",
     "    \n",
-    "    glDrawArrays(GL_TRIANGLES, ini_homem, fim_homem-ini_homem)"
+    "    glDrawArrays(GL_TRIANGLES, ini_cama, fim_cama-ini_cama)"
    ]
   },
   {
@@ -1199,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 868,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 869,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1333,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 870,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 871,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1384,6 +1441,7 @@
     "    desenha_carro()\n",
     "    desenha_cachorro()\n",
     "    desenha_homem()\n",
+    "    desenha_cama()\n",
     "    \n",
     "    mat_view = view()\n",
     "    loc_view = glGetUniformLocation(program, \"view\")\n",
