--- a/Trabalho 2/Trabalho-2.ipynb
+++ b/Trabalho 2/Trabalho-2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 63,
    "metadata": {
     "scrolled": false,
     "tags": []
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 64,
    "metadata": {
     "scrolled": true
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 70,
    "metadata": {
     "tags": []
    },
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1206,7 +1206,7 @@
     "    rx = 0.0; ry = 0.0; rz = 1.0;\n",
     "    \n",
     "    # translacao\n",
-    "    tx = -25; ty = -1.0; tz = -5.0;\n",
+    "    tx = -28; ty = -1.0; tz = -5.0;\n",
     "    \n",
     "    # escala\n",
     "    sx = 4.0; sy = 4.0; sz = 4.0;\n",
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1477,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1542,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1614,11 +1614,10 @@
    "trusted": true
   },
   "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   "hash": "1c532efb7b702a59145ee86f0ef3ad3eef355b8384e03af75aa63b4e4167ffd0"
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.10 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -1631,7 +1630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
