--- a/Trabalho 2/Trabalho-2.ipynb
+++ b/Trabalho 2/Trabalho-2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 692,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 693,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 694,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 695,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 696,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 697,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 698,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 699,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 700,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 701,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 702,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 703,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 704,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 705,
    "metadata": {},
    "outputs": [
     {
@@ -418,12 +418,12 @@
     "print('Processando modelo piso.obj. Vertice final:',len(vertices_list))\n",
     "fim_pedra = len(vertices_list)\n",
     "\n",
-    "load_texture_from_file(1,'terreno/piso-2.jpg')\n"
+    "load_texture_from_file(1,'terreno/piso.jpg')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 706,
    "metadata": {},
    "outputs": [
     {
@@ -448,12 +448,12 @@
     "print('Processando modelo grama.obj. Vertice final:',len(vertices_list))\n",
     "fim_grama = len(vertices_list)\n",
     "\n",
-    "load_texture_from_file(4,'terreno/grama-1.jpg')\n"
+    "load_texture_from_file(4,'terreno/grama.jpg')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 707,
    "metadata": {
     "scrolled": false,
     "tags": []
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 708,
    "metadata": {
     "scrolled": true
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 709,
    "metadata": {},
    "outputs": [
     {
@@ -574,14 +574,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 710,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processando modelo arvore.obj. Vertice inicial: 1263057\n",
+      "Processando modelo arvore-1.obj. Vertice inicial: 1263057\n",
       "Materiais.001 vertice inicial:  1263057\n",
       "Materiais vertice inicial:  1350753\n",
       "Processando modelo arvore.obj. Vertice final: 1408281\n"
@@ -589,34 +589,34 @@
     }
    ],
    "source": [
-    "modelo = load_model_from_file('arvore/arvore.obj')\n",
+    "modelo = load_model_from_file('arvore/arvore-1.obj')\n",
     "\n",
-    "print('Processando modelo arvore.obj. Vertice inicial:',len(vertices_list))\n",
-    "ini_arvore = len(vertices_list)\n",
-    "arvore_vertices_text = []\n",
+    "print('Processando modelo arvore-1.obj. Vertice inicial:',len(vertices_list))\n",
+    "ini_arvore1 = len(vertices_list)\n",
+    "arvore1_vertices_text = []\n",
     "faces_visited = []\n",
-    "arvore_text_id = [15,16]\n",
+    "arvore1_text_id = [15,16]\n",
     "for face in modelo['faces']:\n",
     "    if face[2] not in faces_visited:\n",
     "        print(face[2], 'vertice inicial: ', len(vertices_list))\n",
     "        faces_visited.append(face[2])\n",
-    "        arvore_vertices_text.append(len(vertices_list))\n",
+    "        arvore1_vertices_text.append(len(vertices_list))\n",
     "    for vertice_id in face[0]:\n",
     "        vertices_list.append( modelo['vertices'][vertice_id-1] )\n",
     "    for texture_id in face[1]:\n",
     "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
     "print('Processando modelo arvore.obj. Vertice final:',len(vertices_list))\n",
-    "fim_arvore = len(vertices_list)\n",
+    "fim_arvore1 = len(vertices_list)\n",
     "    \n",
-    "arvore_vertices_text.append(fim_arvore)\n",
+    "arvore1_vertices_text.append(fim_arvore1)\n",
     "\n",
-    "load_texture_from_file(15,'arvore/tronco.jpg')\n",
-    "load_texture_from_file(16,'arvore/folha.jpg')\n"
+    "load_texture_from_file(15,'arvore/tronco-1.jpg')\n",
+    "load_texture_from_file(16,'arvore/folha-1.jpg')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 711,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 712,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 713,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 714,
    "metadata": {
     "tags": []
    },
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 715,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 716,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 717,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 718,
    "metadata": {},
    "outputs": [
     {
@@ -857,6 +857,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 719,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processando modelo arvore-2.obj. Vertice inicial: 2396748\n",
+      "Materiais.002 vertice inicial:  2396748\n",
+      "Materiais.003 vertice inicial:  2506188\n",
+      "Processando modelo arvore-2.obj. Vertice final: 2584644\n"
+     ]
+    }
+   ],
+   "source": [
+    "modelo = load_model_from_file('arvore/arvore-2.obj')\n",
+    "\n",
+    "print('Processando modelo arvore-2.obj. Vertice inicial:',len(vertices_list))\n",
+    "ini_arvore2 = len(vertices_list)\n",
+    "arvore2_vertices_text = []\n",
+    "faces_visited = []\n",
+    "arvore2_text_id = [25,26]\n",
+    "for face in modelo['faces']:\n",
+    "    if face[2] not in faces_visited:\n",
+    "        print(face[2], 'vertice inicial: ', len(vertices_list))\n",
+    "        faces_visited.append(face[2])\n",
+    "        arvore2_vertices_text.append(len(vertices_list))\n",
+    "    for vertice_id in face[0]:\n",
+    "        vertices_list.append( modelo['vertices'][vertice_id-1] )\n",
+    "    for texture_id in face[1]:\n",
+    "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
+    "print('Processando modelo arvore-2.obj. Vertice final:',len(vertices_list))\n",
+    "fim_arvore2 = len(vertices_list)\n",
+    "    \n",
+    "arvore2_vertices_text.append(fim_arvore2)\n",
+    "\n",
+    "load_texture_from_file(25,'arvore/tronco-2.png')\n",
+    "load_texture_from_file(26,'arvore/folha-2.png')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -869,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 720,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 721,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 722,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,11 +985,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 723,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def desenha_arvore(_tx, _ty, _tz):\n",
+    "def desenha_arvore1(_tx, _ty, _tz):\n",
     "    \n",
     "    # rotacao\n",
     "    angle = 0.0;\n",
@@ -962,18 +1004,16 @@
     "    mat_model = model(angle, rx, ry, rz, tx, ty, tz, sx, sy, sz)\n",
     "    loc_model = glGetUniformLocation(program, \"model\")\n",
     "    glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
-    "       \n",
-    "    glBindTexture(GL_TEXTURE_2D, 0)\n",
     "    \n",
-    "    for i in range(0, len(arvore_text_id)):\n",
-    "        glBindTexture(GL_TEXTURE_2D, arvore_text_id[i])\n",
-    "        glDrawArrays(GL_TRIANGLES, arvore_vertices_text[i], arvore_vertices_text[i+1]-arvore_vertices_text[i])\n",
+    "    for i in range(0, len(arvore1_text_id)):\n",
+    "        glBindTexture(GL_TEXTURE_2D, arvore1_text_id[i])\n",
+    "        glDrawArrays(GL_TRIANGLES, arvore1_vertices_text[i], arvore1_vertices_text[i+1]-arvore1_vertices_text[i])\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 724,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 725,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 726,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 727,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 728,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 729,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1168,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 730,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1195,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 731,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1222,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 732,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1249,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 733,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 734,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1303,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 735,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,6 +1365,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 736,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def desenha_arvore2(_tx, _ty, _tz):\n",
+    "    \n",
+    "    # rotacao\n",
+    "    angle = 0.0;\n",
+    "    rx = 0.0; ry = 0.0; rz = 1.0;\n",
+    "    \n",
+    "    # translacao\n",
+    "    tx = _tx; ty = _ty; tz = _tz;\n",
+    "    \n",
+    "    # escala\n",
+    "    sx = 3.0; sy = 3.0; sz = 3.0;\n",
+    "    \n",
+    "    mat_model = model(angle, rx, ry, rz, tx, ty, tz, sx, sy, sz)\n",
+    "    loc_model = glGetUniformLocation(program, \"model\")\n",
+    "    glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
+    "    \n",
+    "    for i in range(0, len(arvore2_text_id)):\n",
+    "        glBindTexture(GL_TEXTURE_2D, arvore2_text_id[i])\n",
+    "        glDrawArrays(GL_TRIANGLES, arvore2_vertices_text[i], arvore2_vertices_text[i+1]-arvore2_vertices_text[i])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1336,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 737,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1477,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 738,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1524,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 739,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1542,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 740,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1565,8 +1632,12 @@
     "    if polygonal_mode==False:\n",
     "        glPolygonMode(GL_FRONT_AND_BACK,GL_FILL)\n",
     "    \n",
-    "    desenha_arvore(30.0, -1.0, 30.0)\n",
-    "    desenha_arvore(-30.0, -1.0, 30.0)   \n",
+    "    desenha_arvore1(40.0, -1.0, 30.0)  \n",
+    "    desenha_arvore2(25.0, -1.0, 30.0)\n",
+    "    desenha_arvore1(10.0, -1.0, 30.0)\n",
+    "    desenha_arvore2(-5.0, -1.0, 30.0)   \n",
+    "    desenha_arvore1(-20.0, -1.0, 30.0)\n",
+    "    desenha_arvore2(-35.0, -1.0, 30.0)\n",
     "    desenha_terreno()\n",
     "    desenha_casa()\n",
     "    desenha_sofa()\n",
